# prompton

./: .gitignore  PRODUCT.md  README.md  index.html  latest.json.example  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/technical/: agent.md  architecture.md  contributing.md  database.md  frontend.md  macos-notarization.md  releases.md  security-and-data.md
docs/user/: assistant.md  getting-started.md  history-and-library.md  safety.md  settings.md  sql-and-results.md  troubleshooting.md  workspace.md
scripts/: check-version.mjs  set-version.mjs
skills/explain-plan/: SKILL.md
skills/explore-schema/: SKILL.md
skills/write-safe-select/: SKILL.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  migrate.rs  secrets.rs  state.rs
src-tauri/src/agent/: budgeter.rs  budgeter_tests.rs  mod.rs  ollama.rs  providers.rs  runtime.rs  tool_parse.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: d1.rs  driver.rs  manager.rs  manager_tests.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  types.rs
src-tauri/src/discover/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/skills/: mod.rs
src/components/: action-notice.tsx  activity-pulse.tsx  activity-rail.tsx  brand-icon.tsx  brand-mark.tsx  chord-picker.tsx  connection-status.tsx  copyable-snippet.tsx  detail-pane.tsx  empty-state.tsx  expandable-clamp.tsx  icon-button.tsx  (+13 more)
(+55 files in other folders)
