[package]
name = "prompton"
version = "0.1.2"
description = "Prompton — conversational agentic database client"
authors = ["Prompton"]
edition = "2021"

[lib]
name = "prompton_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "mysql", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
parking_lot = "0.12"
dirs = "6"
regex = "1"
tracing = "0.1"
urlencoding = "2"
tauri-plugin-process = "2"

[profile.dev]
incremental = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
